Implement Services to create and load cryptocurrencies
Implement services to listen on favorite
cryptocurrencies and notify users if the price goes
to there desired price