@@ -8,6 +8,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 @RequiredArgsConstructor
 public class MyUserDetails implements UserDetails {
@@ -16,7 +17,7 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(
+        return List.of(
                 new SimpleGrantedAuthority(userDTO.userRole().name()));
     }
 
